simplify project